--- a/commerceApp/src/main/resources/templates/customer.html
+++ b/commerceApp/src/main/resources/templates/customer.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>customer</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+
+    <link rel="canonical" href="https://getbootstrap.com/docs/4.1/examples/starter-template/">
 </head>
 
 <body>
