--- a/commerceApp/src/main/resources/templates/log.html
+++ b/commerceApp/src/main/resources/templates/log.html
@@ -3,17 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <title>Access logs</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+
+    <link rel="canonical" href="https://getbootstrap.com/docs/4.1/examples/starter-template/">
 </head>
 
 <body>
 
 <h2>List of logs</h2>
-<table>
+<table  class="table table-striped">
     <thead>
     <tr>
-        <td><b>Username</b></td>
-        <td><b>Path</b></td>
-        <td><b>Date</b></td>
+
+        <th style="width: 40px;">Username</th>
+        <th style="width: 100px;">Path</th>
+        <th style="width: 120px;">Date</th>
+
+
 
     </tr>
     </thead>
