--- a/commerceApp/src/main/resources/templates/product.html
+++ b/commerceApp/src/main/resources/templates/product.html
@@ -3,21 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <title>Products</title>
-    <link th:rel="stylesheet" th:href="@{webjars/bootstrap/4.0.0-2/css/bootstrap.min.css} "/>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+
+    <link rel="canonical" href="https://getbootstrap.com/docs/4.1/examples/starter-template/">
 
 </head>
 
 <body>
 
 <h2>List of Products</h2>
-<table>
+<table class="table table-striped">
     <thead>
     <tr>
-        <td><b>Id</b></td>
-        <td><b>Name</b></td>
-        <td><b>Description</b></td>
-        <td><b>Brand</b></td>
 
+        <th style="width: 40px;">Id</th>
+        <th style="width: 100px;">Name</th>
+        <th style="width: 120px;">Description</th>
+
+        <th>Brand</th>
 
     </tr>
     </thead>
