--- a/commerceApp/src/main/resources/templates/user.html
+++ b/commerceApp/src/main/resources/templates/user.html
@@ -12,12 +12,13 @@
 <body>
 
 <h2>List of Users</h2>
-<table class="table table-striped">
+<table class="table table-hover table-dark">
     <thead>
     <tr>
 
         <th style="width: 15px;">Id</th>
         <th style="width: 100px;">FirstName</th>
+
         <th style="width: 120px;">LastName</th>
 
         <th>Email</th>
@@ -25,11 +26,36 @@
     </tr>
     </thead>
     <tr th:each="user:${user}">
+
+
         <td th:text="${user.id}">id</td>
+
         <td th:text="${user.firstName}">firstName</td>
         <td th:text="${user.lastName}">lastName</td>
         <td th:text="${user.email}">email</td>
 
+
+    </tr>
+</table>
+
+<h2>List of Users sorted by email</h2>
+<table class="table table-hover table-dark">
+    <tr>
+
+        <th style="width: 15px;">Id</th>
+        <th style="width: 100px;">FirstName</th>
+
+        <th style="width: 120px;">LastName</th>
+
+        <th>Email</th>
+
+    </tr>
+    <tr th:each="user, stat : ${#lists.sort(user, byEmail)}">
+
+        <td th:text="${user.id}">id</td>
+        <td th:text="${user.firstName}">firstName</td>
+        <td th:text="${user.lastName}">lastName</td>
+        <td th:text="${user.email}">email</td>
     </tr>
 </table>
 
