--- a/commerceApp/src/main/resources/templates/user.html
+++ b/commerceApp/src/main/resources/templates/user.html
@@ -38,7 +38,7 @@
     </tr>
 </table>
 
-<h2>List of Users sorted by email</h2>
+<h2>List of Users sorted by email filtered by id</h2>
 <table class="table table-hover table-dark">
     <tr>
 
@@ -51,7 +51,7 @@
 
     </tr>
     <tr th:each="user, stat : ${#lists.sort(user, byEmail)}">
-
+    <tr th:each="user,rowStat : ${user.?[id == 3]}">
         <td th:text="${user.id}">id</td>
         <td th:text="${user.firstName}">firstName</td>
         <td th:text="${user.lastName}">lastName</td>
