--- a/commerceApp/src/main/resources/templates/user.html
+++ b/commerceApp/src/main/resources/templates/user.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
-    <title>Products</title>
+    <title>Users</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
 
     <link rel="canonical" href="https://getbootstrap.com/docs/4.1/examples/starter-template/">
